--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+input {
+  min-width: 350px;
+  min-height: 50px;
 }
 
-.message {
-  color: blue;
+button {
+  margin-left: 20px;
+  min-width: 85px;
+  min-height: 35px;
 }
