--- a/src/palette.css
+++ b/src/palette.css
@@ -1,9 +1,28 @@
-:root {
+/* :root {
   --main-color: #2b5278;
+} */
+
+.conteiner {
+  margin: 20px 50px;
+  background-color: white;
+  box-shadow: 0 10px 20px lightseagreen;
+  height: 95vh;
+  min-width: 600px;
 }
 
-.wrap-content {
-  display: flex;
-  margin: 0 30px;
-  padding-top: 10px;
+.Mui-selected {
+  /* Костыль конечно. Видел Как реализовано у Вас, хотел попробовать разобраться сам. Чуть позже продолжу) */
+  color: purple !important;
+  border: 1px solid purple !important;
+  box-shadow: 0 2px 3px purple !important;
+  background-color: white !important;
+}
+
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
