--- a/src/palette.css
+++ b/src/palette.css
@@ -12,10 +12,10 @@
 
 .Mui-selected {
   /* Костыль конечно. Видел Как реализовано у Вас, хотел попробовать разобраться сам. Чуть позже продолжу) */
-  color: purple !important;
-  border: 1px solid purple !important;
-  box-shadow: 0 2px 3px purple !important;
-  background-color: white !important;
+  border: 1px solid grey !important;
+  background-color: #099 !important;
+  box-shadow: 0 2px 3px grey;
+  color: white !important;
 }
 
 @keyframes show {
